fix setupMealOnclick function, add final comments, fix overlay to start as visible

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <section>
       <div
-        class="loadingOverlay w-100 bg-black justify-content-center align-items-center position-absolute start-0 end-0"
+        class="loadingOverlay w-100 bg-black justify-content-center align-items-center position-fixed start-0 end-0"
       >
         <i class="fa-solid fa-spinner fa-spin text-white fa-5x"></i>
       </div>
